# gtk-quartz-engine

./: autogen.sh  configure.ac
src/: Makefile.am  WindowGradientHelper.h  WindowGradientHelper.m  nsNativeThemeColors.h  quartz-draw.c  quartz-draw.h  quartz-rc-style.c  quartz-rc-style.h  quartz-style.c  quartz-style.h
theme/: gtkrc
